--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <!-- hnaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaahnaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaat -->
 
   
-  <title>     Rohrreinigung-Rau
+  <title>        Rohrreinigung-Schweiger
 
 
 
@@ -78,7 +78,9 @@
             <a class="navbar-brand" href="index.html">
               <span>
                 
-             Rohrreinigung-Rau
+             Rohrreinigung-Schweiger
+
+
 
 
 
@@ -119,7 +121,8 @@
             <h2>
               Datenschutzerklärung            </h2>
             <p>
-                  Rohrreinigung-Rau
+                     Rohrreinigung-Schweiger
+
 
 
 
@@ -129,13 +132,13 @@
               <br />
 
 
-    Henry Rau
+Jan Schweiger
 
     <br />
 
         022876383633   <br />
 
-Niederstraße 29, 45141 Essen
+Heisterkampstraße 26, 45770 Marl
   <br />
               
  
