--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>    Rohrreinigung-Rau
+  <title>       Rohrreinigung-Schweiger
+
 
 
 
@@ -69,7 +70,9 @@
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
               <span>
-               Rohrreinigung-Rau
+                Rohrreinigung-Schweiger
+
+
 
 
 
